# astro-camera

./: .gitignore  Pipfile  README.md  astrocam.nmconnection  astrocam.service  camera_base.py  camera_cv.py  camera_dummy.py  camera_picam.py  index.html  pi-setup.sh  pyproject.toml  server.py  server_debug.py  server_trace.py
.github/: dependabot.yml
astro_camera/: __init__.py  __main__.py  datatypes.py
src/astro_camera/: __init__.py  __main__.py  datatypes.py  server.py
src/astro_camera/camera/: __init__.py  dummy.py  opencv_webcam.py  picam.py  webcam.py
src/astro_camera/server/: __init__.py  image_browser.py
unused/: README.md  index.html  server_old.py
