[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "astro_camera"
description = "Raspberry Pi based astrophotography system."
readme = "README.md"
license = "MPL-2.0"
dynamic = ["version"]
dependencies = ["nicegui", "opencv-python"]
requires-python = ">=3.11"
authors = [
    { name = "Gabriel Roper", email = "9311953+marsfan@users.noreply.github.com" },
]
keywords = ["raspberry-pi", "space", "astrophotography"]

[project.urls]
Repository = "https://github.com/marsfan/astro_camera"
Issues = "https://github.com/marsfan/astro_camera/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "astro_camera.__version__" }

[project.scripts]
astro-camera = "astro_camera.__main__:main"

[tool.pyright]
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py311" # Debian 12 comes with Python 3.11, so consider that minimum target
line-length = 79


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "FIX001",   # Don't want to show warnings for FIXME comments
    "FIX002",   # Don't want to show warnings for TODO comments
    "TD001",    # I'm ok with comments that start with FIXME
    "TD002",    # Don't care about adding authors to TODO comments
    "TD003",    # Don't care about adding issue links to TODO comments


    # TODO: These might be good ones to later uncomment and fix
    "TRY003",   # Long messages in exception are ok
    "EM101",    # String literal in exception is OK
    "T201",     # Print statements in code are OK
    "FBT001",   # Boolean positional arguments are
    "EXE001",   # I put shebangs even in files not marked as EXE just to stay in the habit.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
follow_untyped_imports = true
strict = true
# Need to allow this for now as picamera2 is not fully typed
disallow_untyped_calls = false